--- a/DevServer/DevServer/static/css/coming-soon.css
+++ b/DevServer/DevServer/static/css/coming-soon.css
@@ -1,22 +1,23 @@
-#dancing-gir {
-   border-radius: 50%;
-   height: 50%;
-}
-
-.gir {
-    padding-top: 10%;
-    height: 75%;
-}
-
 .nav-image {
     border-radius: 50%;
     width: 50px;
     height: 50px;
 }
 
+#loading-gir {
+    width: 10%;
+    height: 100%;
+}
+
+.gir {
+    padding-top: 5%;
+    height: 20%;
+}
+
 h1 {
 	color: white;
 }
+
 
 html {
     height: 100%;
@@ -24,7 +25,7 @@ html {
 
 body {
     height: 100%;
-    background-image: url("/static/media/main_page_background.gif");
+    background-image: url("/static/media/under-construction-back.gif");
     background-repeat: no-repeat;
     background-size:100% 100%;
 }
