working on assignment three extracredit, finished part 2 and 3

--- a/public_html/static/css/hw3.css
+++ b/public_html/static/css/hw3.css
@@ -26,3 +26,15 @@ p {
 	font-size: 20px;
 }
 
+body {
+    height: 100%;
+    width: 100%;
+    /*background-image: url("../media/space.gif");*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    overflow-y: scroll;
+    padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+    box-sizing: content-box;
+}
