--- a/public_html/static/css/my-bolded-font.css
+++ b/public_html/static/css/my-bolded-font.css
@@ -1,5 +1,4 @@
-h1, p {
- color: red;
- -webkit-text-stroke: 1px red;
- font-family: arial; color: green;
+h1 {
+ -webkit-text-stroke: 1px white;
+ color: black;
 }
