--- a/public_html/static/css/hw3.css
+++ b/public_html/static/css/hw3.css
@@ -29,7 +29,7 @@ p {
 body {
     height: 100%;
     width: 100%;
-    /*background-image: url("../media/space.gif");*/
+    background-image: url("../media/particles1.gif");
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
